# prometheus

./: .gitignore  .prometheusignore  .pypirc.template  CITATION.cff  FUN.MD  LINKEDIN_ARTICLE.md  PROMETHEUS_README.md  README.md  benchmark.py  benchmark_report.md  build.sh  design_patterns.py  detectors.py  entropy_analyzer.py  erisml-lib-discussion-post.md  fp_filter.py  framing-hypothesis-how-it-works.md  framing-hypothesis-statistical-methodology.md  fun.docx  fun_hypothesis.py  fundocx  hubris.1.py  hubris.py  hubris_fp_filter.py  ignore_patterns.py  lang_analyzers.py  models.py  olympus.py  oracle.py  patterns.py  prometheus.html  prometheus.py  prometheus_BurntSushi_ripgrep.json  prometheus_BurntSushi_ripgrep_report.md  prometheus_ahb-sjsu_erisml-lib.json  prometheus_ahb-sjsu_prometheus.html  prometheus_antirez_sds.json  prometheus_antirez_sds_report.md  prometheus_chalk_chalk.json  prometheus_chalk_chalk_report.md  (+40 more)
.olympus_cache/: hubris_ahb-sjsu_prometheus.json  hubris_git_git.json  prometheus_ahb-sjsu_prometheus.json  prometheus_git_git.json
SQND-docs/: Algebraic_Topology_of_Self_Whitepaper.md  ENGINEERISM_LINKEDIN.docx  ENGINEERISM_LINKEDIN.md  ENGINEERS_MANIFESTO.docx  ENGINEERS_MANIFESTO.md  Mechanistic_Correlates_Proposal.md  NASQND_Experimental_Protocols_v1.docx  NASQND_Experimental_Protocols_v1.md  Non_Abelian_SQND_Bond_2026_v3.md  Non_Abelian_SQND_Bond_2026_v3_1.md  Non_Abelian_SQND_Bond_2026_v3_2.docx  Non_Abelian_SQND_Bond_2026_v3_2.md  Non_Abelian_SQND_Bond_2026_v3_3.md  Non_Abelian_SQND_Bond_2026_v3_3_stratified.md  Non_Abelian_SQND_Bond_2026_v3_4_final.docx  Non_Abelian_SQND_Bond_2026_v3_4_final.md  Non_Abelian_SQND_Bond_2026_v4_0.md  Philosophy_Engineering_Meetup 2].pptx  Protocol1_NASQND_Experiment.ipynb  STAGEMIND_IRB_Protocol.md  Stratified_Quantum_Normative_Dynamics_-_Bond_-_v1_-_Dec_2025 (1).tex  Stratified_Quantum_Normative_Dynamics_-_Bond_-_v1_-_Dec_2025.tex  Stratified_Quantum_Normative_Dynamics_-_Bond_-_v2_-_Dec_2025.tex  Stratified_Quantum_Normative_Dynamics_-_Bond_-_v3_-_Dec_2025.tex  Stratified_Quantum_Normative_Dynamics_-_Bond_-_v5_-_Dec_2025.tex  Stratified_Quantum_Normative_Dynamics_-_Bond_-_v6_-_Dec_2025.tex  Stratified_Quantum_Normative_Dynamics_-_Unified_Framework_-_Bond_-_v1_-_Dec_2025.docx  THE_NEW_FOUNDATIONALISM.docx  THE_NEW_FOUNDATIONALISM.md  algebraic_topology_of_self.py  analysis2.json  andrew-bond-cv-2026.docx  andrew-bond-cv-2026.md  anthropic-fellows-q1-interest.md  anthropic-fellows-q2-excited.md  anthropic-fellows-q3-background.md  anthropic-fellows-q4-fulltime.md  anthropic-fellows-q5-continue-safety.md  arxiv_submitter.py  bell_test_results_20260106_170451.json  (+50 more)
docs/: Diverse-Test.html  LINKEDIN_ARTICLE.docx  Linkedin_Article_Test.docx  Linkedin_Article_Test.md  Python-Framework-Test_2026.html  README.1.md  linkedin-python-frameworks-article-v2.docx  linkedin-python-frameworks-article-v2.md  linkedin-python-frameworks-article.md  linkedin_article_python.docx  linkedin_article_python.md
prometheus_analyzer/: __init__.py  _version.py
temp/: comparison.html  erisml_hubris.json  git_hubris.json  hubris_debug.json  hubris_encode_httpx.json  hubris_git_git.json  hubris_pallets_flask.json  hubris_psf_requests.json  hubris_v1.py  olympus_comparison.html  prometheus_EnterpriseQualityCoding_FizzBuzzEnterpriseEdition.html  prometheus_v1.py  (+23 more)
(+61 files in other folders)
